oops/oops.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    k8s-app: oops
  name: oops
  namespace: monitoring
spec:
  replicas: 1
  serviceName: "oops"
  template:
    metadata:
      labels:
        k8s-app: oops
    spec:
      containers:
      - image: registry.tech.dreamhack.se/tech/oops:latest
        imagePullPolicy: Always
        name: oops
        volumeMounts:
        - mountPath: "/backend/instance"
          name: oops-data
      - image: quay.io/dhtech/dhauth
        imagePullPolicy: Always
        name: dhauth
      restartPolicy: Always
      volumes:
        - name: oops-data
          persistentVolumeClaim:
            claimName: oops-data
